fixed desktop alignment

--- a/style.css
+++ b/style.css
@@ -63,17 +63,16 @@
     }
     .svg1{
         position:absolute;
-        right: 1250px;
-        top: 1100px;
+        left: -150px;
+        top: 1000px;
     }
 
     .svg2{
         position:absolute;
-        left: 1805px;
         top: 200px;
-        left: 1210px;
         height: 240px;
         width: 130px;
+        right: 0px;
     }
 
     .image2{
@@ -139,10 +138,21 @@
 
     }
     
-    .type-key , p{
+    .type-key {
         font-family: 'Barlow';
         font-style: normal;
         font-size: 18px;
+        font-weight: 550;
+        line-height: 26px;
+        letter-spacing: 0px;
+        text-align: left;
+        color: #7B8BAD;
+    }
+
+    p{
+        font-family: 'Barlow';
+        font-style: normal;
+        font-size: 16px;
         font-weight: 550;
         line-height: 26px;
         letter-spacing: 0px;
@@ -156,7 +166,7 @@
         border-radius: 8px;
         display: inline-block;
         position: relative;
-        top: 268px;
+        top: 310px;
         left: 130px;
     }
 
@@ -168,7 +178,7 @@
         position: relative;
         left: 150px;
         margin-left: 20px;
-        top: 315px;
+        top: 310px;
     }
 
     .feat2{
@@ -190,7 +200,7 @@
         position: relative;
         left: 200px;
         margin-left: 20px;
-        top: 286px;
+        top: 310px;
     }
 
     .button-two{
@@ -231,6 +241,10 @@
         top: 400px;
         padding: 50px;
 
+    }
+    span{
+        font-size: 16px;
+        font-weight: 500;
     }
 }
 
